--- a/dlink-modem-page/public/index.html
+++ b/dlink-modem-page/public/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://play-lh.googleusercontent.com/ZU3G0no5ZsCe1JN2aWT0JOIqhjvc5MWd8Q9uJehnPGChhuQzWEHbkzpBFuuTj-ppack" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
